apps/python-flaskapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flaskapp-grp
  namespace: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-flaskapp-grp
  template:
    metadata:
      labels:
        app: python-flaskapp-grp
    spec:
      containers:
      - name: python-flaskapp-grp
        image: jamencidor/flaskapp:doesnotexist
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
