apps/python-flaskapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flaskapp-grp
  namespace: flaskapp
spec:
  selector:
    app: python-flaskapp-grp
  ports:
  - port: 80
    targetPort: 5000
